--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CollabVMSharp"]
 	path = CollabVMSharp
-	url = https://git.computernewb.com/Elijah/CollabVMSharp.git
+	url = https://github.com/elijahr2411/CollabVMSharp.git
